--- a/index.html
+++ b/index.html
@@ -18,21 +18,32 @@
         const [activity, setActivity] = React.useState("");
         const [edit, setEdit] = React.useState({});
         const [todos, setTodos] = React.useState([]);
+        const [message, setMessage] = React.useState();
         function generateId() {
           return Date.now();
         }
 
         function saveTodoHandler(event) {
           event.preventDefault();
+          if (!activity) {
+            return setMessage("Input tidak boleh kosong");
+          }
+          setMessage("");
 
           if (edit.id) {
             const updatedTodo = {
-              id: edit.id,
+              ...edit,
               activity,
             };
-            console.log(updatedTodo);
 
-            return;
+            const editTodoIndex = todos.findIndex(function (todo) {
+              return todo.id == edit.id;
+            });
+            const updatedTodos = [...todos];
+            updatedTodos[editTodoIndex] = updatedTodo;
+
+            setTodos(updatedTodos);
+            return cancelEditHandler();
           }
 
           setTodos([
@@ -40,17 +51,22 @@
             {
               id: generateId(),
               activity: activity,
+              done: false,
             },
           ]);
+          setMessage("");
           setActivity("");
         }
         function removeTodohandler(todoId) {
           const filteredTodos = todos.filter(function (todo) {
-            console.log(todoId, todo.id);
             return todo.id !== todoId;
           });
 
           setTodos(filteredTodos);
+
+          if (edit.id) {
+            cancelEditHandler();
+          }
 
           //   console.log(filteredTodos);
         }
@@ -59,9 +75,30 @@
           setEdit(todo);
         }
 
+        function cancelEditHandler() {
+          setEdit({});
+          setActivity("");
+        }
+
+        function doneTodoHandler(todo) {
+          const updatedTodo = {
+            id: todo.id,
+            activity: todo.activity,
+            done: todo.done ? false : true,
+          };
+          const editTodoIndex = todos.findIndex(function (currentTodo) {
+            return currentTodo.id == todo.id;
+          });
+          const updatedTodos = [...todos];
+          updatedTodos[editTodoIndex] = updatedTodo;
+
+          setTodos(updatedTodos);
+        }
+
         return (
           <>
             <h1>Simple To Do List </h1>
+            {message && <div style={{ color: "red" }}>{message}</div>}
             <form onSubmit={saveTodoHandler}>
               <input
                 type="text"
@@ -72,18 +109,30 @@
                 }}
               />
               <button type="submit">{edit.id ? "Simpan Perubahan" : "Tambah"}</button>
+              {edit.id && <button onClick={cancelEditHandler}>Batal Edit</button>}
             </form>
-            <ul>
-              {todos.map(function (todo) {
-                return (
-                  <li key={todo.id}>
-                    {todo.activity}
-                    <button onClick={removeTodohandler.bind(this, todo.id)}>Hapus</button>
-                    <button onClick={editTodoHandler.bind(this, todo)}>Edit</button>
-                  </li>
-                );
-              })}
-            </ul>
+            {todos.length > 0 ? (
+              <ul>
+                {todos.map(function (todo) {
+                  return (
+                    <li key={todo.id}>
+                      <input
+                        type="checkbox"
+                        onChange={doneTodoHandler.bind(this, todo)}
+                        checked={todo.done}
+                      />
+                      {todo.activity}({todo.done ? "selesai" : "belum selesai"})
+                      <button onClick={removeTodohandler.bind(this, todo.id)}>Hapus</button>
+                      <button onClick={editTodoHandler.bind(this, todo)}>Edit</button>
+                    </li>
+                  );
+                })}
+              </ul>
+            ) : (
+              <p>
+                <i>tidak ada todo</i>
+              </p>
+            )}
           </>
         );
       }
